--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.17.2",
     "cookie-parser": "^1.4.3",
     "express": "^4.15.3",
+    "express-fileupload": "^0.1.3",
     "jsonwebtoken": "^7.4.1",
     "mongoose": "^4.10.6",
     "morgan": "^1.8.2",
